fixed busje text alignment

--- a/src/styles/partials/_images.scss
+++ b/src/styles/partials/_images.scss
@@ -23,14 +23,6 @@ figure footer {
   padding: 10px 20px;
 }
 
-header div {
-  text-align: right;
-  color: white;
-  h1 {
-    text-align: left;
-  }
-}
-
 a.license  {
   float: right;
   color: white;
